--- a/dvc.yaml
+++ b/dvc.yaml
@@ -2,34 +2,34 @@ stages:
   load_data:
     cmd: python src/load_data.py --config=params.yaml
     deps:
-    - src/get_data.py
-    - src/load_data.py
-    - data_git/winequality.csv
+    - src/get_data.py            # These are the files need to track by DVC. if any change detected it triggers the pipeline
+    - src/load_data.py           # These are the files need to track by DVC. if any change detected it triggers the pipeline
+    - data_git/winequality.csv   # These are the files need to track by DVC. if any change detected it triggers the pipeline
     outs:
     - data/raw/winequality.csv
 
-  split_data:
-    cmd: python src/split_data.py --config=params.yaml
-    deps:
-    - src/split_data.py
-    - data/raw/winequality.csv
-    outs:
-    - data/processed/train_winequality.csv
-    - data/processed/test_winequality.csv 
+  # split_data:
+  #   cmd: python src/split_data.py --config=params.yaml
+  #   deps:
+  #   - src/split_data.py
+  #   - data/raw/winequality.csv
+  #   outs:
+  #   - data/processed/train_winequality.csv
+  #   - data/processed/test_winequality.csv 
 
-  train_and_evaluate:
-    cmd: python src/train_and_evaluate.py --config=params.yaml
-    deps:
-    - data/processed/train_winequality.csv
-    - data/processed/test_winequality.csv 
-    - src/train_and_evaluate.py
-    params:
-    - estimators.ElasticNet.params.alpha
-    - estimators.ElasticNet.params.l1_ratio
-    metrics:
-    - report/scores.json:
-        cache: false
-    - report/params.json:
-        cache: false
-    outs:
-    - saved_models/model.joblib
+  # train_and_evaluate:
+  #   cmd: python src/train_and_evaluate.py --config=params.yaml
+  #   deps:
+  #   - data/processed/train_winequality.csv
+  #   - data/processed/test_winequality.csv 
+  #   - src/train_and_evaluate.py
+  #   params:
+  #   - estimators.ElasticNet.params.alpha
+  #   - estimators.ElasticNet.params.l1_ratio
+  #   metrics:
+  #   - report/scores.json:
+  #       cache: false
+  #   - report/params.json:
+  #       cache: false
+  #   outs:
+  #   - saved_models/model.joblib
